# machine-learning

ml_from_scratch/: README.md  pyproject.toml  requirements.txt
ml_from_scratch/models/logistic_regression/: README.md  constants.py  costs_visualizer.py  data_preparation.py  data_types.py  find_best_learning_rate.py  lr_model_predict.py  lr_model_train.py  make_prediction.py  utils.py
ml_from_scratch/tests/models/logistic_regression/: test_sigmoid.py  test_toto.py
