[tool.poetry]
name = "ml-from-scratch"
version = "0.1.0"
description = "Doing ML from scratch"
authors = ["Abder <abderrazagh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
tqdm = "^4.66.4"
h5py = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
